cmake_minimum_required(VERSION 3.26)
project(ProjectEuler C)

set(CMAKE_C_STANDARD 11)
add_executable(problem1 "Problem 1/problem1.c")
add_executable(problem2 "Problem 2/problem2.c")
add_executable(problem3 "Problem 3/problem3.c")
add_executable(problem4 "Problem 4/problem4.c")
add_executable(problem5 "Problem 5/problem5.c")
add_executable(problem6 "Problem 6/problem6.c")
add_executable(problem7 "Problem 7/problem7.c")
add_executable(problem8 "Problem 8/problem8.c")
add_executable(problem9 "Problem 9/problem9.c")
add_executable(problem10 "Problem 10/problem10.c")